[Feature] font adjust

--- a/taurl.cn/biu/css/main.css
+++ b/taurl.cn/biu/css/main.css
@@ -52,7 +52,7 @@ html {
 body {
     overflow: hidden;
     color: rgba(255, 255, 255, 0.5);
-    font-family: "Russo One", arial, sans-serif;
+    font-family: "Open Sans", Arial, sans-serif;
     line-height: 1.25;
     letter-spacing: 0.06em;
 }
